--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -32,15 +32,48 @@
   width: 70px;
 }
 .navMenu {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.linkText {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  color: #747474;
 }
 
 .link {
+}
+
+.link {
+  color: #0d2c7b;
+  position: relative;
+  /* padding-bottom: 0.5rem; */
+}
+
+.link:hover::before {
   background: linear-gradient(
     86.16deg,
     rgba(104, 149, 255, 0) 3.14%,
     rgba(199, 174, 252, 0.4) 99.61%,
     rgba(144, 91, 255, 0.4) 114.63%
   );
+}
+
+.navItems {
+  position: relative;
+  cursor: pointer;
+}
+.navItems :global(.active)::before {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+  content: "";
+  background: #0d2c7b;
 }
 
 .bottom {
