--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -3,7 +3,7 @@
   top: 0;
   height: 100vh;
   background: linear-gradient(180deg, #13131a 0%, #0f1323 100%);
-  padding: 1rem;
+  padding-top: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,6 +18,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
+  
 }
 
 .logoTitle {
@@ -34,46 +35,42 @@
 .navMenu {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
 
-.linkText {
+.link {
+  width: 100%;
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
   color: #747474;
-}
-
-.link {
-}
-
-.link {
-  color: #0d2c7b;
   position: relative;
-  /* padding-bottom: 0.5rem; */
+  padding: 0.5rem 2rem;
 }
 
-.link:hover::before {
+.link:hover {
   background: linear-gradient(
     86.16deg,
     rgba(104, 149, 255, 0) 3.14%,
     rgba(199, 174, 252, 0.4) 99.61%,
     rgba(144, 91, 255, 0.4) 114.63%
   );
+
 }
 
 .navItems {
   position: relative;
   cursor: pointer;
+  display: flex;
 }
-.navItems :global(.active)::before {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 1px;
-  content: "";
-  background: #0d2c7b;
+.navItems :global(.active) {
+  background: linear-gradient(
+    86.16deg,
+    rgba(104, 149, 255, 0) 3.14%,
+    rgba(199, 174, 252, 0.4) 99.61%,
+    rgba(144, 91, 255, 0.4) 114.63%
+  );
 }
 
 .bottom {
