--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -5,8 +5,21 @@
   border-bottom: 0.2px solid #6c93d3;
   color: #fff;
   padding: 1rem;
-  text-align: center;
   height: 80px;
   width: 100%;
   z-index: 1000;
+}
+
+.navContainer{
+  display: flex;
+  justify-content: space-between;
+}
+.btn{
+padding: 10px 22px;
+gap: 10px;
+/* grd3 */
+background: linear-gradient(93.24deg, rgba(185, 128, 241, 0.61) -0.2%, rgba(102, 89, 252, 0.61) 99.8%);
+border: 1px solid #AA8DFE;
+border-radius: 3px;
+
 }
