just checking if it is up to date

--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -56,7 +56,7 @@
     rgba(199, 174, 252, 0.4) 99.61%,
     rgba(144, 91, 255, 0.4) 114.63%
   );
-
+color: #fff;
 }
 
 .navItems {
@@ -71,6 +71,7 @@
     rgba(199, 174, 252, 0.4) 99.61%,
     rgba(144, 91, 255, 0.4) 114.63%
   );
+  color: #fff;
 }
 
 .bottom {
